# mercury

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
src/: account.rs  builtin.rs  event.rs  lib.rs  main.rs  ops.rs  process.rs  pump.rs  schedule.rs  statement.rs  syntax.rs  timeline.rs  transaction.rs
src/builtin/: macros.rs  tax.rs
src/syntax/: mercury.pest  parsing.rs
web/: Cargo.toml  README.md
web/src/: lib.rs
