[package]
name = "mercury"
version = "0.2.0"
edition = "2021"
authors = ["Thomas Woolhouse <thomasrwoolhouse@gmail.com>"]
categories = ["finance", "parser-implementations"]
description = "A finance helper library for tracking transactions."
keywords = ["finance", "parser", "mercury"]
license = "MIT"
readme = "README.md"
repository = "github.com/TWoolhouse/mercury"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
cron = "0.15"
itertools = "0.14"
pest = "2.8"
pest_derive = { version = "2.8", features = ["grammar-extras"] }
string-interner = "0.19"
