[package]
name = "mercury-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Woolhouse <thomasrwoolhouse@gmail.com>"]
categories = ["finance", "parser-implementations"]
description = "Wasm bindings for Mercury."
keywords = ["finance", "parser", "mercury"]
license = "MIT"
readme = "README.md"
repository = "github.com/TWoolhouse/mercury"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mercury = { path = "./../" }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1.7", optional = true }

[features]
default = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "s"
